backend/src/main/java/com/example/backend/cmm/error/exception/BadRequestException.java
package com.example.backend.cmm.error.exception;

public class BadRequestException extends RuntimeException {

    public BadRequestException(String message) {
        super(message);
    }
}
